# daedalos

./: .gitignore  .mcp.json  Cargo.toml  HUMAN.md  LICENSE  README.txt  flake.nix  install-tools.sh  install.sh  research.txt  uninstall.sh
crates/agent/: Cargo.toml
crates/agent/src/: commands.rs  main.rs  messaging.rs  state.rs  templates.rs  tmux.rs
crates/analyze/: Cargo.toml  analyze.spec.yaml
crates/analyze/src/: main.rs  orchestrator.rs
crates/backup/: Cargo.toml
crates/backup/src/: lib.rs  main.rs
crates/codex/: Cargo.toml
crates/codex/src/: chunker.rs  indexer.rs  lib.rs  main.rs  searcher.rs
crates/container/: Cargo.toml
crates/container/src/: lib.rs  main.rs
crates/context/: Cargo.toml
crates/context/src/: estimator.rs  main.rs  tracker.rs  visualizer.rs
crates/daedalos/: Cargo.toml
crates/daedalos-core/: Cargo.toml
crates/daedalos-core/examples/: debug.rs
crates/daedalos-core/src/: config.rs  daemon.rs  format.rs  lib.rs  process.rs
crates/daedalos-mcp/: Cargo.toml
crates/daedalos-mcp/src/: handler.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/daedalos/src/: main.rs
crates/error-db/: Cargo.toml
crates/error-db/src/: db.rs  main.rs  matcher.rs
crates/evolve/: Cargo.toml
crates/evolve/src/: analyze.rs  cli.rs  gaps.rs  intent.rs  main.rs  output.rs  path.rs
crates/focus/: Cargo.toml
crates/focus/src/: lib.rs  main.rs  session.rs  stats.rs  store.rs
crates/gates/: Cargo.toml
crates/gates/src/: checker.rs  config.rs  main.rs
crates/handoff/: Cargo.toml
crates/handoff/src/: generator.rs  lib.rs  main.rs  storage.rs
crates/journal/: Cargo.toml
crates/journal/src/: collector.rs  db.rs  main.rs  narrative.rs
crates/loop/: Cargo.toml
crates/loop/src/: checkpoint.rs  cli.rs  main.rs  promise.rs  state.rs
crates/lsp-pool/: Cargo.toml
crates/lsp-pool/src/: config.rs  main.rs  protocol.rs  server.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: db.rs  display.rs  focus.rs  git.rs  lib.rs  main.rs
crates/oracle/: Cargo.toml  install.sh
crates/oracle/src/: backend.rs  config.rs
crates/pair/: Cargo.toml
crates/pair/src/: lib.rs  main.rs  session.rs  store.rs
crates/project/: Cargo.toml
crates/project/src/: cache.rs  cli.rs  database.rs  detectors.rs  main.rs  parsers.rs
crates/remote/: Cargo.toml
crates/remote/src/: host.rs  lib.rs  main.rs  ssh.rs  sync.rs  tunnel.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: context.rs  decisions.rs  intent.rs  main.rs
crates/review/: Cargo.toml
crates/review/src/: lib.rs  main.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: backend.rs  main.rs  sandbox.rs
crates/scratch/: Cargo.toml
crates/scratch/src/: main.rs  store.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  main.rs  vault.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  main.rs
daedalos-rs/: Cargo.toml
daedalos-rs/crates/observe/: Cargo.toml
daedalos-tools/: Cargo.toml
daedalos-tools/agent/: agent.spec.yaml  install.sh  prompt.txt
daedalos-tools/agent/completions/: _agent
daedalos-tools/agent/lib/: agents.sh  comms.sh  groups.sh  hooks.sh  search.sh  signals.sh  snapshot.sh  status.sh  templates.sh  tmux.sh  workflow.sh
daedalos-tools/agent/templates/: debugger.json  explorer.json  implementer.json  planner.json  reviewer.json  tester.json  watcher.json
daedalos-tools/agent/tests/: run_tests.sh
daedalos-tools/backup/: backup.spec.yaml
daedalos-tools/codex/: codex.spec.yaml  install.sh  prompt.txt
daedalos-tools/container/: container.spec.yaml
daedalos-tools/context/: README.txt  context.spec.yaml  install.sh  prompt.txt
daedalos-tools/daedalos/: daedalos.spec.yaml
daedalos-tools/daedalos-mcp/: README.txt  daedalos-mcp.spec.yaml  install.sh
daedalos-tools/daedalos/completions/: _daedalos  daedalos.bash
daedalos-tools/error-db/: SPEC.txt  error-db.spec.yaml  install.sh  prompt.txt
daedalos-tools/error-db/errordb/: cli.py  database.py
daedalos-tools/evolve/: evolve.spec.yaml
daedalos-tools/focus/: focus.spec.yaml
daedalos-tools/gates/: gates.spec.yaml
daedalos-tools/gates/lib/: __init__.py  checker.py  config.py
daedalos-tools/handoff/: handoff.spec.yaml
daedalos-tools/journal/: journal.spec.yaml
daedalos-tools/journal/lib/: __init__.py  collector.py  narrative.py
daedalos-tools/loop/: SPEC.txt  loop  loop.spec.yaml  prompt.txt
daedalos-tools/loop/completions/: loop.bash  loop.fish  loop.zsh
daedalos-tools/loop/lib/: __init__.py  bestofn.py  checkpoint.py  notify.py  orchestrator.py  spec_loader.py  subagent.py
daedalos-tools/loop/templates/: tdd.yaml
daedalos-tools/lsp-pool/: README.txt  lsp-pool.spec.yaml  prompt.txt
daedalos-tools/lsp-pool/lsppool/: config.py  daemon.py  predictor.py  servers.py
daedalos-tools/mcp-hub/: README.txt  mcp-hub.spec.yaml
daedalos-tools/mcp-hub/mcphub/: config.py  daemon.py  registry.py  router.py
daedalos-tools/metrics/: metrics.spec.yaml
daedalos-tools/notify/: notify.spec.yaml
daedalos-tools/observe/: observe.spec.yaml
daedalos-tools/observe/lib/: app.py
daedalos-tools/pair/: pair.spec.yaml
daedalos-tools/project/: install.sh  project.spec.yaml  prompt.txt  pyproject.toml
daedalos-tools/remote/: remote.spec.yaml
daedalos-tools/resolve/: resolve.spec.yaml
daedalos-tools/review/: review.spec.yaml
daedalos-tools/sandbox/: SPEC.txt  sandbox.spec.yaml
daedalos-tools/scratch/: prompt.txt  scratch.spec.yaml
daedalos-tools/scratch/lib/: common.sh
daedalos-tools/secrets/: secrets.spec.yaml
daedalos-tools/session/: session.spec.yaml
daedalos-tools/spec/: SPEC.txt  install.sh  spec.spec.yaml
daedalos-tools/spec/lib/: common.sh  query.sh  validate.sh
daedalos-tools/spec/templates/: tool.spec.yaml
daedalos-tools/template/: template.spec.yaml
daedalos-tools/undo/: install.sh  undo.spec.yaml  undod.py
daedalos-tools/undo/lib/: common.sh  database.sh  timeline.sh  watch.sh
daedalos-tools/undo/schema/: init.sql
daedalos-tools/verify/: SPEC.txt  prompt.txt  verify.spec.yaml
daedalos-tools/verify/lib/: detect.sh  (+1 more)
(+222 files in other folders)
