[workspace]
resolver = "2"
members = [
    "crates/daedalos-core",
    "crates/observe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daedalos Contributors"]
repository = "https://github.com/daedalos/daedalos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "5"

# Process management
sysinfo = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
daedalos-core = { path = "crates/daedalos-core" }
