[workspace]
resolver = "2"
members = [
    "crates/daedalos-core",
    "crates/observe",
    "crates/loop",
    "crates/undo",
    "crates/agent",
    "crates/codex",
    "crates/gates",
    "crates/scratch",
    "crates/journal",
    "crates/context",
    "crates/verify",
    "crates/project",
    "crates/error-db",
    "crates/sandbox",
    "crates/spec",
    "crates/mcp-hub",
    "crates/lsp-pool",
    "crates/evolve",
    "crates/resolve",
    "crates/env",
    "crates/notify",
    "crates/focus",
    "crates/metrics",
    "crates/session",
    "crates/secrets",
    "crates/handoff",
    "crates/pair",
    "crates/review",
    "crates/backup",
    "crates/container",
    "crates/template",
    "crates/daedalos",
    "crates/daedalos-mcp",
    "crates/remote",
    "crates/trust",
    "crates/analyze",
    "crates/oracle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daedalos Contributors"]
repository = "https://github.com/daedalos/daedalos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "5"

# Process management
sysinfo = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix libc bindings
libc = "0.2"

# Directory walking
walkdir = "2"

# Regex
regex = "1"

# Internal crates
daedalos-core = { path = "crates/daedalos-core" }
