[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent orchestration for Daedalos - spawn and manage Claude Code instances in tmux"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
