[package]
name = "analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Analyze for gaps and fill them - orchestrates evolve + agent + loop"

[[bin]]
name = "analyze"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true

# Local dependencies
colored = "2"
