[package]
name = "backup"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project backup with optional encryption for Daedalos"

[[bin]]
name = "backup"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

# Compression
flate2 = "1.0"

# Archive creation
tar = "0.4"

# Directory walking
walkdir = "2.5"
