[package]
name = "codex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic code search for Daedalos"

[[bin]]
name = "codex"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# File walking
walkdir = "2"
ignore = "0.4"

# Regex for chunking
regex = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"
