[package]
name = "context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context window management for Claude Code - monitor and manage token usage"

[[bin]]
name = "context"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
