[package]
name = "daedalos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Daedalos tools"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
sysinfo.workspace = true
tokio.workspace = true
