[package]
name = "daedalos-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing Daedalos tools to Claude and other AI assistants"

[[bin]]
name = "daedalos-mcp"
path = "src/main.rs"

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "io-std"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Home directory for tool paths
dirs.workspace = true

# Internal
daedalos-core.workspace = true
