[package]
name = "daedalos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified entry point for all Daedalos tools"

[[bin]]
name = "daedalos"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
daedalos-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
sysinfo.workspace = true

# Local dependencies
colored = "2"
which = "7"
