[package]
name = "error-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Error pattern database - institutional memory for debugging"

[[bin]]
name = "error-db"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

# SQLite for pattern storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Regex for pattern matching
regex = "1.10"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
