[package]
name = "focus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pomodoro timer and distraction blocking for deep work sessions"

[[bin]]
name = "focus"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
