[package]
name = "gates"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configurable approval checkpoints for AI agents - control how much autonomy they get"

[[bin]]
name = "gates"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

# Glob pattern matching for sensitive paths
glob = "0.3"
