[package]
name = "handoff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Context summaries for shift changes between humans and AI agents"

[[bin]]
name = "handoff"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Time
chrono.workspace = true

# Filesystem
dirs.workspace = true

# Terminal detection
atty = "0.2"

# Internal crates
daedalos-core.workspace = true

[dev-dependencies]
tempfile = "3"
