[package]
name = "loop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The core iteration primitive - iterate until promise met"

[[bin]]
name = "loop"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
daedalos-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Local dependencies
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
