[package]
name = "lsp-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pre-warmed language server pool for instant code intelligence"

[[bin]]
name = "lsp-pool"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tokio.workspace = true
sysinfo.workspace = true
