[package]
name = "metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Productivity statistics for Daedalos - what gets measured gets managed"

[[bin]]
name = "metrics"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Time
chrono.workspace = true

# Filesystem
dirs.workspace = true

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Unix
libc.workspace = true

# Internal crates
daedalos-core.workspace = true

[dev-dependencies]
tempfile = "3"
