[package]
name = "oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified LLM interface - the curl for language models"

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
dirs.workspace = true
chrono.workspace = true
libc.workspace = true

# TOML config parsing
toml = "0.8"

# Text formatting
colored = "2"

# Line editing for REPL
rustyline = "14"

[dev-dependencies]
tempfile = "3"
