[package]
name = "pair"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pair programming via shared tmux sessions for Daedalos"

[[bin]]
name = "pair"
path = "src/main.rs"

[lib]
name = "pair"
path = "src/lib.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile = "3"
