[package]
name = "project"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pre-computed codebase intelligence - instant project understanding for AI agents"

[[bin]]
name = "project"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# File walking
walkdir = "2"
ignore = "0.4"

# Regex for parsing
regex = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Globbing
glob = "0.3"
