[package]
name = "remote"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSH and remote development management for Daedalos"

[[bin]]
name = "remote"
path = "src/main.rs"

[lib]
name = "remote"
path = "src/lib.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
