[package]
name = "resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Resolve uncertainty through context gathering instead of asking users"

[[bin]]
name = "resolve"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true

# Text formatting
colored = "2"

# Regex for pattern matching
regex = "1"

[dev-dependencies]
tempfile = "3"
