[package]
name = "review"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Human code review workflow for AI-generated changes"

[[bin]]
name = "review"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
