[package]
name = "scratch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project-scoped ephemeral experiment environments for fearless experimentation"

[[bin]]
name = "scratch"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
