[package]
name = "secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local secrets vault for Daedalos - encrypted storage for API keys, tokens, and credentials"

[[bin]]
name = "secrets"
path = "src/main.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

# Age encryption
age = { version = "0.10", features = ["armor"] }

# For secure password input
rpassword = "7"

# For tar export/import
tar = "0.4"
flate2 = "1"
