[package]
name = "session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Save/restore terminal sessions for Daedalos"

[[bin]]
name = "session"
path = "src/main.rs"

[lib]
name = "session"
path = "src/lib.rs"

[dependencies]
daedalos-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
